package cs4530.u1433303.cs4530drawingapplication

import android.content.Context
import androidx.activity.ComponentActivity
import androidx.compose.ui.graphics.Color
import androidx.compose.ui.test.assertIsDisplayed
import androidx.compose.ui.test.assertIsSelected
import androidx.compose.ui.test.hasTestTag
import androidx.compose.ui.test.junit4.createAndroidComposeRule
import androidx.compose.ui.test.performClick
import androidx.compose.ui.test.performTouchInput
import androidx.compose.ui.test.swipe
import androidx.compose.ui.test.swipeLeft
import androidx.compose.ui.test.swipeRight
import androidx.compose.ui.test.swipeUp
import androidx.navigation.compose.rememberNavController
import androidx.room.Room
import androidx.test.core.app.ApplicationProvider
import androidx.test.ext.junit.runners.AndroidJUnit4
import cs4530.u1433303.cs4530drawingapplication.data.DrawingDao
import cs4530.u1433303.cs4530drawingapplication.data.DrawingDatabase
import cs4530.u1433303.cs4530drawingapplication.data.DrawingRepository
import org.junit.After
import org.junit.Before
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith
import org.junit.Assert.assertTrue

@RunWith(AndroidJUnit4::class)
class DrawingAppScreenEspressoTests {
    // Setup an isolated lightweight activity that will hold ONLY our composable that needs testing
    @get:Rule val composeTestRule = createAndroidComposeRule<ComponentActivity>()

    // vm will be referenced in tests to check values of pen properties
    // vm.uiState.value holds pen properties
    lateinit var vm : DrawingViewModel

    // Context, dao, and repo references required to get the ViewModel to be
    // initialized. None of these are being tested. Purely for instantiation purposes.
    lateinit var appContext : Context
    lateinit var dao : DrawingDao
    lateinit var repo : DrawingRepository

    // Constants for either initialization or testing against changes
    private val INITIAL_PEN_SIZE = 25.0f
    private val INITIAL_PEN_COLOR = Color.Red
    private val INITIAL_PEN_SHAPE = BrushShape.Round
    private val TEST_STALL_PERIOD : Long = 2000 // in milliseconds



    /**
     * Initializes a new DrawingViewModel using the Constant values
     * before each test.
     */
    @Before
    fun setUp(){
        appContext = ApplicationProvider.getApplicationContext()
        val db = Room.databaseBuilder(
            appContext,
            DrawingDatabase::class.java,
            "drawing_db"
        ).fallbackToDestructiveMigration().build()
        dao = db.drawingDao()

        repo = DrawingRepository.getInstance(appContext, dao)

        vm = DrawingViewModel(repo)
        vm.setBrushShape(INITIAL_PEN_SHAPE)
        vm.setBrushColor(INITIAL_PEN_COLOR)
        vm.setBrushSize(INITIAL_PEN_SIZE)

        composeTestRule.setContent {
            DrawingAppScreen(vm, onBack = rememberNavController()::popBackStack)
        }
    }

    /**
     * Stalls each test after they run so that we can observe test results visually.
     */
    @After
    fun stall(){
        Thread.sleep(TEST_STALL_PERIOD)
    }
    /**
     * 3 part test that checks if we can draws on the DrawingAppScreen's
     * drawCanvas composable.
     *
     * Checks if the composable exists, is displayed, and then
     * draws on the screen (THIS IS A VISUAL TEST FOR NOW)
     */
    @Test
    fun simpleDrawTest() {
        composeTestRule.onNode(hasTestTag("drawCanvas"))
            .assertIsDisplayed()
            .assertExists()
            .performTouchInput { swipeLeft() }
            .performTouchInput { swipeUp() }
    }

    /**
     * Effectively checks to see if DrawingAppScreen's squareBrushButton
     * composable can be selected.
     *
     * First clicks the squareBrush. Then checks programmatically if the
     * composable isSelected.
     */
    @Test
    fun selectSquareBrushTest(){
        composeTestRule.onNode(hasTestTag("squareBrushButton"))
            .assertExists()
            .assertIsDisplayed()
            .performClick()
        composeTestRule.onNode(hasTestTag("squareBrushButton"))
            .assertIsSelected()
    }

    /**
     * Checks if the slider can be adjusted to a larger value
     * than default (see INITIAL_PEN_SIZE constant)
     */
    @Test
    fun setBrushSizeLargeTest(){
        composeTestRule.onNode(hasTestTag("brushSizeSlider"))
            .assertExists()
            .assertIsDisplayed()
        composeTestRule.onNode(hasTestTag("brushSizeSlider"))
            .performClick()
            .performTouchInput { swipeRight(300.0f, 600.0f) }
        assertTrue(vm.uiState.value.brushSize >= INITIAL_PEN_SIZE)
    }

    /**
     * Checks that the clearCanvasButton exists, is displayed,
     * and can actually clear the DrawingViewModel's list of Strokes
     * to that of an empty List.
     */
    @Test
    fun clearCanvasTest(){
        composeTestRule.onNode(hasTestTag("clearCanvasButton"))
            .assertExists()
            .assertIsDisplayed()
        composeTestRule.onNode(hasTestTag("drawCanvas"))
            .performTouchInput { swipeUp() }
            .performTouchInput { swipeRight() }
        Thread.sleep(1000)
        composeTestRule.onNode(hasTestTag("clearCanvasButton"))
            .performClick()
        assertTrue(vm.uiState.value.strokes.isEmpty())
    }

    /**
     * Checks that the DrawingAppScreenUndoButton exists, is displayed,
     * and will actually remove the last stroke made in the DrawingViewModel's
     * list of Strokes.
     */
    @Test
    fun undoTest(){
        composeTestRule.onNode(hasTestTag("DrawingAppScreenUndoButton"))
            .assertExists()
            .assertIsDisplayed()
        composeTestRule.onNode(hasTestTag("drawCanvas"))
            .performTouchInput { swipeUp() }
            .performTouchInput { swipeRight() }
        assertTrue(vm.uiState.value.strokes.size == 2)
        Thread.sleep(1000)
        composeTestRule.onNode(hasTestTag("DrawingAppScreenUndoButton"))
            .performClick()
        assertTrue(vm.uiState.value.strokes.size == 1)
    }

    // TODO: Need a way to conduct a color picking test through espresso;
    //  this may require some work/research to get done, we'd have to somehow
    //  check testTags in ColorPickerDialog, wait for certain events to occur,
    //  then finally check with the vm to see if, internally, the color was changed.
    //  Optionally draw on the screen to visually verify.

}